--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="assets/css/styles.css" />
 
-  <title>Responsive portfolio website - Crypticalcoder</title>
+  <title>Alice Perucchietti Portfolio</title>
 </head>
 
 <body>
