portfolio final version v1

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
 
         <div class="home__img-wrapper">
-          <img src="assets/img/profile.png" alt="" class="home__img" />
+          <img src="assets/img/alice_profile.png" alt="" class="home__img" />
         </div>
       </div>
     </section>
@@ -137,10 +137,10 @@
     <section class="about section" id="about">
       <div class="about__container container grid">
         <div class="about__img-wrapper">
-          <img src="assets/img/about.png" alt="" class="about__img" />
-          <img src="assets/img/about.png" alt="" class="about__img" />
-          <img src="assets/img/about.png" alt="" class="about__img" />
-          <img src="assets/img/about.png" alt="" class="about__img" />
+          <img src="assets/img/alice_about.png" alt="" class="about__img" />
+          <img src="assets/img/alice_about.png" alt="" class="about__img" />
+          <img src="assets/img/alice_about.png" alt="" class="about__img" />
+          <img src="assets/img/alice_about.png" alt="" class="about__img" />
         </div>
 
         <div class="about__content">
@@ -432,237 +432,6 @@
       </div>
     </section>
 
-    <!--==================== QUALIFICATION ====================-->
-    <!-- <section class="qualification section" id="qualification">
-      <h2 class="section__title title-center" data-title="My Journey">
-        Qualification
-      </h2>
-
-      <div class="resume__container container grid">
-        <div class="resume__group">
-          <h3 class="resume__heading">Education</h3>
-
-          <div class="resume__items">
-            <div class="resume__item">
-              <div class="resume__header">
-                <h3 class="resume__subtitle">Start 2 Impact</h3>
-              </div>
-
-              <div class="resume__content">
-                <div class="resume__date-title">
-                  <h3 class="resume__title">Master in UX/ UI Design</h3>
-                  <span class="resume__date">Nov.2024 - June 2025</span>
-                </div>
-
-                <p class="resume__description">
-                  Theory & Project:
-                  Graphic Design, Copywriting, Architettura dell’informazione,
-                  Design process, Obiettivi e Target, Analisi dei competitor, Analisi as
-                  is, Survey e Interviste, User Experience, Acessibilità, Wireframing,
-                  Design e sviluppo , User test , HTML, CSS, User Interface.
-                  Project work.
-
-                </p>
-              </div>
-            </div>
-
-            <div class="resume__item">
-              <div class="resume__header">
-                <h3 class="resume__subtitle">
-                  24 Ore Business School
-                </h3>
-              </div>
-
-              <div class="resume__content">
-                <div class="resume__date-title">
-                  <h3 class="resume__title">Executive Master in Energy Management, Environment & Sustainability</h3>
-                  <span class="resume__date">Oct.2022 - March 2023</span>
-                </div>
-
-                <p class="resume__description">
-                  HSE: Health, Safety, and Environment. Implementation,
-                  maintenance, and auditing of safety : ISO 50001, UNI EN
-                  45001, and UNI EN ISO 14001 standards, Risk assessment,
-                  Implementation ESG Objectives (& European Taxonomy),
-                  Ecological Transition,
-                  Standard: GRI, SASB, ESRS, European Agenda and
-                  International Goals,
-                  Energy Market, Oil & Gas, Smart City and Sustainable Mobility,
-                  Project Work: Sustainability Reporting for a company.
-                  Identify and classify stakeholders for the case-study; define a
-                  value for stakeholders and materiality topics for company
-                  product, Customer loyalty and Engagement in according to
-                  the criteria of the SASB (Sustainability Accounting Standards
-                  Board).
-                </p>
-              </div>
-            </div>
-
-            <div class="resume__item">
-              <div class="resume__header">
-                <h3 class="resume__subtitle">
-                  Politecnico di Torino
-                </h3>
-              </div>
-
-              <div class="resume__content">
-                <div class="resume__date-title">
-                  <h3 class="resume__title"> Master Degree in Architecture for Sustainable Project </h3>
-                  <span class="resume__date">Sept. 2019 - July 2024</span>
-                </div>
-
-                <p class="resume__description">
-                  Urban and building design (case study with quantitative and
-                  qualitative analysis, interviews/servey and preparation of
-                  questionnaires with closed or open answers), SWOT analysis
-                  for the redevelopment of an Alpine village (field study);
-                  Circular Economy, Certification (LEED, BREEAM, WELL), Study
-                  of sustainable materials, Project evaluation (LCC, LCA, Project
-                  Management, Cost concepts), Environmental technical
-                  physics, Design of outdoor and indoor environments, Building
-                  surveys & Structural calculations, Architectural history
-                  Final thesis: “Low enthalpy geothermal energy in an urban
-                  environment”
-
-
-                </p>
-              </div>
-            </div>
-
-            <div class="resume__item">
-              <div class="resume__header">
-                <h3 class="resume__subtitle">Politecnico di Torino</h3>
-              </div>
-              <p class="resume__description">
-
-              <div class="resume__content">
-                <div class="resume__date-title">
-                  <h3 class="resume__title">Bachelor Degree in Architecture</h3>
-                  <span class="resume__date">2014 - 2019</span>
-                </div>
-                <p class="resume__description"></p>
-
-
-                <p class="resume__description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna
-                  aliqua.
-                </p>
-              </div>
-              <div class="resume__content">
-                <div class="resume__date-title">
-                  <h3 class="resume__title">Artistic High School "A. Passoni"</h3>
-                  <span class="resume__date">2008 - 2013</span>
-                </div>
-                <p class="resume__description"></p>
-                Fashion and Costume Studies. Drawing, visual and geometric arts, color theory, pattern making.
-              </div>
-            </div>
-          </div>
-
-          <div class="resume__group">
-            <h3 class="resume__heading">Experience</h3>
-
-            <div class="resume__items">
-              <div class="resume__item">
-                <div class="resume__header">
-                  <h3 class="resume__subtitle">Substitute teacher in primary and preschool education</h3>
-                </div>
-
-                <div class="resume__content">
-                  <div class="resume__date-title">
-                    <h3 class="resume__title">Primary School “M.L King”</h3>
-                    <span class="resume__date">Dec.2022 - PRESENT</span>
-                  </div>
-
-                  <p class="resume__description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </p>
-                </div>
-              </div>
-
-              <div class="resume__item">
-                <div class="resume__header">
-                  <h3 class="resume__subtitle">Proposal Engineering Assistant – Photovoltaic Sector</h3>
-                </div>
-
-                <div class="resume__content">
-                  <div class="resume__date-title">
-                    <h3 class="resume__title">ProNur – Progetto Nur s.r.l. </h3>
-                    <span class="resume__date">Sept. 2024 - Nov. 2024</span>
-                  </div>
-
-                  <p class="resume__description">
-                    Sizing of residential and industrial photovoltaic systems, creation
-                    and management of files for the design of renewable energy
-                    systems, planning and technical-economic management of the
-                    client portfolio, drafting of ordinary and extraordinary
-                    maintenance contracts, and preparing estimates (SolarEdge
-                    design, PVGIS).
-
-
-
-                  <div class="resume__item">
-                    <div class="resume__header">
-                      <h3 class="resume__subtitle">Document recovery and revision </h3>
-                    </div>
-
-                    <div class="resume__content">
-                      <div class="resume__date-title">
-                        <h3 class="resume__title">ITALY RE s.r.l </h3>
-                        <span class="resume__date">Sept. 2022 - Nov. 2022</span>
-                      </div>
-                      <p class="resume__description">
-                        Technical expert for document recovery and revision (cadastral,
-                        municipal) and administration
-
-                      </p>
-                    </div>
-                    <div class="resume__group">
-                      <h3 class="resume__heading">Internship</h3>
-
-                      <div class="resume__items">
-                        <div class="resume__item">
-                          <div class="resume__header">
-                            <h3 class="resume__subtitle">Architectural Intern</h3>
-                          </div>
-
-                          <div class="resume__content">
-                            <div class="resume__date-title">
-                              <h3 class="resume__title">Architectural Studio “Macrì & Mancuso”</h3>
-                              <span class="resume__date">Oct.2021 - Jan. 2022</span>
-                            </div>
-
-                            <p class="resume__description">
-                              Building design of straw bale and timber structures
-
-                            </p>
-                          </div>
-                        </div>
-
-                        <div class="resume__item">
-                          <div class="resume__header">
-                            <h3 class="resume__subtitle">Architectural Intern</h3>
-                          </div>
-
-                          <div class="resume__content">
-                            <div class="resume__date-title">
-                              <h3 class="resume__title">Mauriziano Hospital’s Technical Office</h3>
-                              <span class="resume__date">Nov. 2017 - April 2018</span>
-                            </div>
-
-                            <p class="resume__description">
-                              Internship in the Technical Office for Building Maintenance of Hospital Departments
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-    </section> -->
-
     <!--==================== SERVICES ====================-->
     <section class="services section" id="services">
       <h2 class="section__title title-center" data-title="Services">
@@ -893,7 +662,7 @@
 
       <div class="work__container container grid">
         <div class="work__card">
-          <img src="assets/img/premium_photo-1661326248013-3107a4b2bd91.jpg" alt="" class="work__img" />
+          <img src="assets/img/ux_ui_works.jpg" alt="" class="work__img" />
 
           <div class="work__details">
             <h3 class="work__title">UX/UI Design Case Studies</h3>
@@ -902,7 +671,7 @@
         </div>
 
         <div class="work__card">
-          <img src="assets/img/Architectural projects.png" alt="" class="work__img" />
+          <img src="assets/img/architecture_works.png" alt="" class="work__img" />
 
           <div class="work__details">
             <h3 class="work__title">Architectural Projects</h3>
@@ -911,7 +680,7 @@
         </div>
 
         <div class="work__card">
-          <img src="assets/img/handscrafted works.jpg" alt="" class="work__img" />
+          <img src="assets/img/handscrafted_works.jpg" alt="" class="work__img" />
 
           <div class="work__details">
             <h3 class="work__title">Creative & Handcrafted works</h3>
@@ -940,7 +709,7 @@
           </p>
 
           <div class="testimonials__data">
-            <img src="assets/img/tipo 1 luca bianchi.jpg" alt="" class="testimonials__img" />
+            <img src="assets/img/testimonial_1.jpg" alt="" class="testimonials__img" />
 
             <div>
               <h3 class="testimonials__name">Luca Bianchi</h3>
@@ -955,7 +724,7 @@
           </p>
 
           <div class="testimonials__data">
-            <img src="assets/img/tipa 2  giulia rossi.jpg" alt="" class="testimonials__img" />
+            <img src="assets/img/testimonial_2.jpg" alt="" class="testimonials__img" />
 
             <div>
               <h3 class="testimonials__name">Giulia Rossi</h3>
